# voice-agents-hack

./: .gitignore  LICENSE  Otto Landing _Offline_.html  README.md  SETUP.md
.claude/: launch.json
cactus_server/: .env.example  Makefile  README.md  base_llm_handler.py  cactus_handler.py  kokoro_tts.py  pyproject.toml  rag.py  rag_index.py  relay.py  server.py  vehicle.py
cactus_server/docs/: manifest.yaml
cactus_server/scripts/: build_rag_index.py  download_model.py
changmin-test-ios-app/: Info.plist
changmin-test-ios-app/iphone-test/: AudioManager.swift  CameraManager.swift  ContentView.swift  WebSocketManager.swift  iphone_testApp.swift
changmin-test-ios-app/iphone-test.xcodeproj/: project.pbxproj
ios/Voice-AI-Copilot-Server/Voice-AI-Copilot/: CactusEngine.swift  ContentView.swift  CoursePickerView.swift  MainTabView.swift  TrainingCourse.swift  TrainingSessionView.swift  Voice_AI_CopilotApp.swift
ios/Voice-AI-Copilot-Server/Voice-AI-Copilot.xcodeproj/: project.pbxproj
ios/Voice-AI-Copilot/Voice-AI-Copilot/: AppMode.swift  AudioRecorder.swift  CactusEngine.swift  CameraCapture.swift  CameraPreviewView.swift  ContentView.swift  CoursePickerView.swift  EngineARView.swift  EngineSceneView.swift  EnginesView.swift  GeminiCloudChatService.swift  InferenceBackend.swift  InferenceController.swift  MainTabView.swift  RemoteRelayEngine.swift  Speaker.swift  StreamingSpeaker.swift  TrainingScenario.swift  TrainingSessionView.swift  Voice_AI_CopilotApp.swift
ios/Voice-AI-Copilot/Voice-AI-Copilot.xcodeproj/: project.pbxproj
(+41 files in other folders)
